--- a/templates/forum.html
+++ b/templates/forum.html
@@ -25,21 +25,8 @@
 		{{end}}
 	</div>
 	{{if .CurrentUser.Loggedin}}
-	<div class="mod_floater auto_hide">
-		<form method="post">
-			<div class="mod_floater_head">
-				<span></span>
-			</div>
-			<div class="mod_floater_body">
-				<select class="mod_floater_options">
-					<option val="delete">{{lang "topic_list.moderate_delete"}}</option>
-					<option val="lock">{{lang "topic_list.moderate_lock"}}</option>
-					<option val="move">{{lang "topic_list.moderate_move"}}</option>
-				</select>
-				<button>{{lang "topic_list.moderate_run"}}</button>
-			</div>
-		</form>
-	</div>
+	{{template "topics_mod_floater.html"}}
+	
 	{{if .CurrentUser.Perms.CreateTopic}}
 	<div id="forum_topic_create_form" class="rowblock topic_create_form quick_create_form" style="display: none;" aria-label="{{lang "quick_topic.aria"}}">
 		<form id="quick_post_form" enctype="multipart/form-data" action="/topic/create/submit/?session={{.CurrentUser.Session}}" method="post"></form>
@@ -106,7 +93,7 @@
 				<a href="{{.LastUser.Link}}"><img src="{{.LastUser.MicroAvatar}}" height="64" alt="{{.LastUser.Name}}'s Avatar" title="{{.LastUser.Name}}'s Avatar" /></a>
 				<span>
 					<a href="{{.LastUser.Link}}" class="lastName" style="font-size: 14px;" title="{{.LastUser.Name}}">{{.LastUser.Name}}</a><br>
-					<a href="{{.Link}}?page={{.LastPage}}" class="rowsmall lastReplyAt" title="{{abstime .LastReplyAt}}">{{.RelativeLastReplyAt}}</a>
+					<a href="{{.Link}}?page={{.LastPage}}{{if .LastReplyID}}#post-{{.LastReplyID}}{{end}}" class="rowsmall lastReplyAt" title="{{abstime .LastReplyAt}}">{{reltime .LastReplyAt}}</a>
 				</span>
 			</div>
 		</div>
