--- a/templates/topics.html
+++ b/templates/topics.html
@@ -32,22 +32,7 @@
 </div>
 
 {{if .CurrentUser.Loggedin}}
-{{/** TODO: Hide these from unauthorised users? **/}}
-<div class="mod_floater auto_hide">
-	<form method="post">
-	<div class="mod_floater_head">
-		<span></span>
-	</div>
-	<div class="mod_floater_body">
-		<select class="mod_floater_options">
-			<option val="delete">{{lang "topic_list.moderate_delete"}}</option>
-			<option val="lock">{{lang "topic_list.moderate_lock"}}</option>
-			<option val="move">{{lang "topic_list.moderate_move"}}</option>
-		</select>
-		<button class="mod_floater_submit">{{lang "topic_list.moderate_run"}}</button>
-	</div>
-	</form>
-</div>
+{{template "topics_mod_floater.html"}}
 
 {{if .ForumList}}
 {{/** TODO: Have a seperate forum list for moving topics? Maybe an AJAX forum search compatible with plugin_guilds? **/}}
