Laid the foundations for better reply attachments. The attachment manager introduced in the previous patch is now properly localised.
Repurposed AttachmentStore.CountInTopic as a more general CountIn method.
Added an &amp; entity in attachment URLs so that the characters don't get mutated into something weird.
Tried to make the linebreaks a little glitchy in the inline editor, we have a better solution in a mind soon!
Fixed a bug where replies used .ContentHTML instead of .Content which led to a lot of HTML getting in the way of reply edits.
Fixed a bug where reply attachments used the topicID rather than the replyID for their originID entries.
Fixed a bug where the topic attachment counts weren't getting incremented.

Added the topic.select_button_test, topic.copy_button_test and topic.upload_button_test phrases.

Added the attachCount column to the replies table. This commit requires you to run the patcher / updater.

--- a/templates/topic_alt.html
+++ b/templates/topic_alt.html
@@ -82,17 +82,17 @@
 			{{if .Topic.Attachments}}<div class="show_on_edit attach_edit_bay" tid="{{.Topic.ID}}">
 				{{range .Topic.Attachments}}
 				<div class="attach_item{{if .Image}} attach_image_holder{{end}}">
-					{{if .Image}}<img src="//{{$.Header.Site.URL}}/attachs/{{.Path}}?sectionID={{.SectionID}}&sectionType=forums" height="24" width="24" />{{end}}
+					{{if .Image}}<img src="//{{$.Header.Site.URL}}/attachs/{{.Path}}?sectionID={{.SectionID}}&sectionType=forums" height=24 width=24 />{{end}}
 					<span class="attach_item_path" aid="{{.ID}}" fullPath="//{{$.Header.Site.URL}}/attachs/{{.Path}}">{{.Path}}</span>
-					<button class="attach_item_select">Select</button>
-					<button class="attach_item_copy">Copy</button>
+					<button class="attach_item_select">{{lang "topic.select_button_text"}}</button>
+					<button class="attach_item_copy">{{lang "topic.copy_button_text"}}</button>
 				</div>
 				{{end}}
 				<div class="attach_item attach_item_buttons">
 					{{if .CurrentUser.Perms.UploadFiles}}
 					<input name="upload_files" id="upload_files_op" multiple type="file" style="display: none;" />
-					<label for="upload_files_op" class="formbutton add_file_button">Upload</label>{{end}}
-					<button class="attach_item_delete">Delete</button>
+					<label for="upload_files_op" class="formbutton add_file_button">{{lang "topic.upload_button_text"}}</label>{{end}}
+					<button class="attach_item_delete">{{lang "topic.delete_button_text"}}</button>
 				</div>
 			</div>{{end}}
 
