The opening posts should be properly rendered after inline edits now. Switched out the / in the headers for a - The template generator can now handle FieldNodes passed to templates.
Added the topic_alt_userinfo template.
Added the topic_alt_quick_reply template.

--- a/templates/topics.html
+++ b/templates/topics.html
@@ -8,7 +8,7 @@
 		<div class="optbox">
 		{{if .ForumList}}
 			<div class="opt filter_opt">
-				<a class="filter_opt_sep"> / </a>
+				<a class="filter_opt_sep"> - </a>
 				<a href="#" class="filter_opt_label link_label" data-for="topic_list_filter_select">{{if eq .Sort.SortBy "mostviewed" }}{{lang "topic_list.most_viewed_filter"}}{{else}}{{lang "topic_list.most_recent_filter"}}{{end}} <span class="filter_opt_pointy">▾</span></a>
 				<div id="topic_list_filter_select" class="link_select">
 					<div class="link_option link_selected">
