--- a/templates/topic_alt.html
+++ b/templates/topic_alt.html
@@ -14,7 +14,7 @@
 	<form action='/topic/edit/submit/{{.Topic.ID}}?session={{.CurrentUser.Session}}' method="post">
 		<div class="rowitem topic_item{{if .Topic.Sticky}} topic_sticky_head{{else if .Topic.IsClosed}} topic_closed_head{{end}}">
 			<h1 class='topic_name hide_on_edit' title='{{.Topic.Title}}'>{{.Topic.Title}}</h1>
-			<span class="topic_name_forum_sep hide_on_edit"> / </span>
+			<span class="topic_name_forum_sep hide_on_edit"> - </span>
 			<a href="{{.Forum.Link}}" class="topic_forum hide_on_edit">{{.Forum.Name}}</a>
 			{{/** TODO: Does this need to be guarded by a permission? It's only visible in edit mode anyway, which can't be triggered, if they don't have the permission **/}}
 			{{if .CurrentUser.Loggedin}}
@@ -68,13 +68,7 @@
 	</article>
 	{{end}}
 	<article {{scope "opening_post"}} itemscope itemtype="http://schema.org/CreativeWork" class="rowitem passive deletable_block editable_parent post_item top_post" aria-label="{{lang "topic.opening_post_aria"}}">
-		<div class="userinfo" aria-label="{{lang "topic.userinfo_aria"}}">
-			<div class="avatar_item" style="background-image: url({{.Topic.Avatar}}), url(/static/white-dot.jpg);background-position: 0px -10px;">&nbsp;</div>
-			<div class="user_meta">
-				<a href="{{.Topic.UserLink}}" class="the_name" rel="author">{{.Topic.CreatedByName}}</a>
-				{{if .Topic.Tag}}<div class="tag_block"><div class="tag_pre"></div><div class="post_tag">{{.Topic.Tag}}</div><div class="tag_post"></div></div>{{else}}<div class="tag_block"><div class="tag_pre"></div><div class="post_tag post_level">{{level .Topic.Level}}</div><div class="tag_post"></div></div>{{end}}
-			</div>
-		</div>
+		{{template "topic_alt_userinfo.html" .Topic }}
 		<div class="content_container">
 			<div class="hide_on_edit topic_content user_content" itemprop="text">{{.Topic.ContentHTML}}</div>
 			{{if .CurrentUser.Loggedin}}{{if .CurrentUser.Perms.EditTopic}}<textarea name="topic_content" class="show_on_edit topic_content_input">{{.Topic.Content}}</textarea>
@@ -131,44 +125,7 @@
 {{if .CurrentUser.Loggedin}}
 {{if .CurrentUser.Perms.CreateReply}}
 {{if not .Topic.IsClosed or .CurrentUser.Perms.CloseTopic}}
-<div class="rowblock topic_reply_container">
-	<div class="userinfo" aria-label="{{lang "topic.your_information"}}">
-		<div class="avatar_item" style="background-image: url({{.CurrentUser.Avatar}}), url(/static/white-dot.jpg);background-position: 0px -10px;">&nbsp;</div>
-		<div class="user_meta">
-			<a href="{{.CurrentUser.Link}}" class="the_name" rel="author">{{.CurrentUser.Name}}</a>
-			{{if .CurrentUser.Tag}}<div class="tag_block"><div class="tag_pre"></div><div class="post_tag">{{.CurrentUser.Tag}}</div><div class="tag_post"></div></div>{{else}}<div class="tag_block"><div class="tag_pre"></div><div class="post_tag post_level">{{level .CurrentUser.Level}}</div><div class="tag_post"></div></div>{{end}}
-		</div>
-	</div>
-	<div class="rowblock topic_reply_form quick_create_form"  aria-label="{{lang "topic.reply_aria"}}">
-		<form id="quick_post_form" enctype="multipart/form-data" action="/reply/create/?session={{.CurrentUser.Session}}" method="post"></form>
-		<input form="quick_post_form" name="tid" value='{{.Topic.ID}}' type="hidden" />
-		<input form="quick_post_form" id="has_poll_input" name="has_poll" value="0" type="hidden" />
-		<div class="formrow real_first_child">
-			<div class="formitem">
-				<textarea id="input_content" form="quick_post_form" name="reply-content" placeholder="{{lang "topic.reply_content_alt"}}" required></textarea>
-			</div>
-		</div>
-		<div class="formrow poll_content_row auto_hide">
-			<div class="formitem">
-				<div class="pollinput" data-pollinput="0">
-					<input type="checkbox" disabled />
-					<label class="pollinputlabel"></label>
-					<input form="quick_post_form" name="pollinputitem[0]" class="pollinputinput" type="text" placeholder="{{lang "topic.reply_add_poll_option"}}" />
-				</div>
-			</div>
-		</div>
-		<div class="formrow quick_button_row">
-			<div class="formitem">
-				<button form="quick_post_form" name="reply-button" class="formbutton">{{lang "topic.reply_button"}}</button>
-				<button form="quick_post_form" class="formbutton" id="add_poll_button">{{lang "topic.reply_add_poll_button"}}</button>
-				{{if .CurrentUser.Perms.UploadFiles}}
-				<input name="upload_files" form="quick_post_form" id="upload_files" multiple type="file" style="display: none;" />
-				<label for="upload_files" class="formbutton add_file_button">{{lang "topic.reply_add_file_button"}}</label>
-				<div id="upload_file_dock"></div>{{end}}
-			</div>
-		</div>
-	</div>
-</div>
+{{template "topic_alt_quick_reply.html" . }}
 {{end}}
 {{end}}
 {{end}}
