--- a/templates/topic_alt_posts.html
+++ b/templates/topic_alt_posts.html
@@ -1,11 +1,5 @@
 {{range .ItemList}}<article {{scope "post"}} id="post-{{.ID}}" itemscope itemtype="http://schema.org/CreativeWork" class="rowitem passive deletable_block editable_parent post_item{{if .ActionType}} action_item{{end}}">
-	<div class="userinfo" aria-label="{{lang "topic.userinfo_aria"}}">
-		<div class="avatar_item" style="background-image: url({{.Avatar}}), url(/static/white-dot.jpg);background-position: 0px -10px;">&nbsp;</div>
-		<div class="user_meta">
-			<a href="{{.UserLink}}" class="the_name" rel="author">{{.CreatedByName}}</a>
-			{{if .Tag}}<div class="tag_block"><div class="tag_pre"></div><div class="post_tag">{{.Tag}}</div><div class="tag_post"></div></div>{{else}}<div class="tag_block"><div class="tag_pre"></div><div class="post_tag post_level">{{level .Level}}</div><div class="tag_post"></div></div>{{end}}
-		</div>
-	</div>
+	{{template "topic_alt_userinfo.html" . }}
 	<div class="content_container"{{if .ActionType}} style="margin-left: 0px;"{{end}}>
 		{{if .ActionType}}
 			<span class="action_icon" style="font-size: 18px;padding-right: 5px;" aria-hidden="true">{{.ActionIcon}}</span>
