--- a/templates/topic_alt_posts.html
+++ b/templates/topic_alt_posts.html
@@ -5,8 +5,28 @@
 			<span class="action_icon" style="font-size: 18px;padding-right: 5px;" aria-hidden="true">{{.ActionIcon}}</span>
 			<span itemprop="text">{{.ActionType}}</span>
 		{{else}}
-		<div class="edit_source auto_hide">{{.Content}}</div>
 		<div class="editable_block user_content" itemprop="text">{{.ContentHtml}}</div>
+		{{if $.CurrentUser.Loggedin}}{{if $.CurrentUser.Perms.EditReply}}
+		<div class="edit_source auto_hide">{{.Content}}</div>
+
+		{{if .Attachments}}<div class="show_on_edit show_on_block_edit attach_edit_bay" type="reply" id="{{.ID}}">
+				{{range .Attachments}}
+				<div class="attach_item{{if .Image}} attach_image_holder{{end}}">
+					{{if .Image}}<img src="//{{$.Header.Site.URL}}/attachs/{{.Path}}?sectionID={{.SectionID}}&amp;sectionType=forums" height=24 width=24 />{{end}}
+					<span class="attach_item_path" aid="{{.ID}}" fullPath="//{{$.Header.Site.URL}}/attachs/{{.Path}}">{{.Path}}</span>
+					<button class="attach_item_select">{{lang "topic.select_button_text"}}</button>
+					<button class="attach_item_copy">{{lang "topic.copy_button_text"}}</button>
+				</div>
+				{{end}}
+				<div class="attach_item attach_item_buttons">
+					{{if $.CurrentUser.Perms.UploadFiles}}
+					<input name="upload_files" class="upload_files_post" id="upload_files_post_{{.ID}}" multiple type="file" style="display: none;" />
+					<label for="upload_files_post_{{.ID}}" class="formbutton add_file_button">{{lang "topic.upload_button_text"}}</label>{{end}}
+					<button class="attach_item_delete">{{lang "topic.delete_button_text"}}</button>
+				</div>
+		</div>{{end}}
+		{{end}}{{end}}
+
 		<div class="controls button_container{{if .LikeCount}} has_likes{{end}}">
 			<div class="action_button_left">
 			{{if $.CurrentUser.Loggedin}}
