--- a/templates/panel_themes_widgets_widget.html
+++ b/templates/panel_themes_widgets_widget.html
@@ -35,13 +35,13 @@
 <div class="formrow w_simple w_about">
 	<div class="formitem formlabel"><a>{{lang "panel_themes_widgets_body"}}</a></div>
 	<div class="formitem">
-		<textarea name="wtext">{{index .Data "Text"}}</textarea>
+		<textarea name="wtext" class="wtext">{{index .Data "Text"}}</textarea>
 	</div>
 </div>
 <div class="formrow w_default">
 	<div class="formitem formlabel"><a>{{lang "panel_themes_widgets_raw_body"}}</a></div>
 	<div class="formitem">
-		<textarea name="wbody">{{.RawBody}}</textarea>
+		<textarea name="wbody" class="rwtext">{{.RawBody}}</textarea>
 	</div>
 </div>
 </div>
