--- a/templates/panel_analytics_posts.html
+++ b/templates/panel_analytics_posts.html
@@ -26,13 +26,5 @@
 		</div>
 	</main>
 </div>
-<script>
-let rawLabels = [{{range .PrimaryGraph.Labels}}
-{{.}},{{end}}
-];
-let seriesData = [{{range .PrimaryGraph.Series}}
-{{.}},{{end}}
-];
-buildStatsChart(rawLabels, seriesData, "{{.TimeRange}}");
-</script>
+{{template "panel_analytics_script.html" . }}
 {{template "footer.html" . }}
