--- a/templates/panel_analytics_views.html
+++ b/templates/panel_analytics_views.html
@@ -19,7 +19,7 @@
 		<div id="panel_analytics_views_table" class="colstack_item rowlist" aria-label="{{lang "panel_statistics_requests_table_aria"}}">
 			{{range .ViewItems}}
 			<div class="rowitem panel_compactrow editable_parent">
-				<a class="panel_upshift unix_to_24_hour_time">{{.Time}}</a>
+				<a class="panel_upshift {{if or (or (or (eq $.TimeRange "six-hours") (eq $.TimeRange "twelve-hours")) (eq $.TimeRange "one-day")) (eq $.TimeRange "two-days")}}unix_to_24_hour_time{{else}}unix_to_date{{end}}">{{.Time}}</a>
 				<span class="panel_compacttext to_right">{{.Count}}{{lang "panel_statistics_views_suffix"}}</span>
 			</div>
 			{{end}}
