--- a/templates/panel_pages.html
+++ b/templates/panel_pages.html
@@ -5,7 +5,7 @@
 		<div class="colstack_item colstack_head">
 			<div class="rowitem"><h1>{{lang "panel_pages_head"}}</h1></div>
 		</div>
-		<div id="panel_settings" class="colstack_item rowlist">
+		<div id="panel_pages" class="colstack_item rowlist">
 			{{range .ItemList}}
 			<div class="rowitem panel_compactrow">
 				<a href="/panel/pages/edit/{{.ID}}" class="panel_upshift">{{.Title}}</a>&nbsp;<a href="/pages/{{.Name}}">[{{.Name}}]</a>
