--- a/templates/header.html
+++ b/templates/header.html
@@ -56,7 +56,7 @@
 		{{/**<!--</div>-->**/}}
 			<div class="midRow">
 				<div class="midLeft"></div>
-				<div id="back" class="zone_{{.Header.Zone}}{{if .Header.Widgets.RightSidebar}} shrink_main{{end}}">
+				<div id="back" class="zone_{{.Header.Zone}}{{if hasWidgets "rightSidebar" .Header }} shrink_main{{end}}">
 					<div id="main" >
 						<div class="alertbox initial_alertbox">{{range .Header.NoticeList}}
 				{{template "notice.html" . }}{{end}}
