Email errors should be logged now. Reordered the registration logic so the session is created before any, if any, email errors fire. Fixed a bug where the analytics phrases would load after the graph is drawn.

--- a/templates/panel_analytics_script.html
+++ b/templates/panel_analytics_script.html
@@ -10,5 +10,7 @@ let seriesData = [{{range .Graph.Series}}[{{range .}}
 let legendNames = [{{range .Graph.Legends}}
 {{.}},{{end}}
 ];
-buildStatsChart(rawLabels, seriesData, "{{.TimeRange}}",legendNames);
+addInitHook("after_phrases", () => {
+	buildStatsChart(rawLabels, seriesData, "{{.TimeRange}}",legendNames);
+});
 </script>
